Frontend video UI fixes
Fixed a float rounding bug with the topic index num-topics-per-column
calculation and made it so that the caption 'Dont see your topic here?'
never overflows.

--- a/mediaplex/public/styles/base.css
+++ b/mediaplex/public/styles/base.css
@@ -239,7 +239,7 @@ a#nav-topics:hover, a#nav-upload-video:hover { background-position: 0 -39px; }
 }
 #topics-caption {
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	right: 3px;
 	width: 205px;
 }
