--- a/mediaplex/public/styles/videos.css
+++ b/mediaplex/public/styles/videos.css
@@ -14,7 +14,7 @@
 .grid li {
 	float: left;
 	width: 164px;
-	margin: 0 20px 20px 0;
+	margin: 0 20px 50px 0;
 	font: 12px Tahoma, Helvetica, sans-serif;
 	color: #c4c4c4;
 	text-align: center;
